# workers-rust-template

./: Cargo.toml  README.md  cargo-generate.toml  wrangler.toml
src/: lib.rs
src/ui/: package-lock.json  package.json
