[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = [ "{{authors}}" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0", features = ["d1"] }
worker-macros = { version = "0" }
console_error_panic_hook = { version = "0.1.1" }
worker-router = "1"
